--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 /* Ini File CSS */
 
 :root {
@@ -18,6 +19,7 @@
   scroll-behavior: smooth;
 }
 
+/* Koding Untuk Mengatur Judul */
 .title-kalkulator-bmi {
   font-size: 30px;
   margin: 10px 0;
@@ -32,6 +34,7 @@
   font-size: 20px;
 }
 
+/* Koding Untuk Mengatur Text Paragraph */
 .paragraph {
   text-align: justify;
   line-height: 30px;
@@ -46,6 +49,7 @@
   margin-bottom: 30px;
 }
 
+/* Koding Untuk Mengatur Button */
 .btn {
   border: none;
   border-radius: 5px;
@@ -75,6 +79,7 @@
   display: none;
 }
 
+/* Koding Untuk Mengatur Text Pesan Error */
 .error-message {
   color: var(--error-color);
   font-size: 13px;
@@ -85,6 +90,7 @@
   margin: 30px 5%;
 }
 
+/* Koding Untuk Mengatur Form Input */
 .form {
   background-color: #dbdbdbcd;
   padding: 20px;
@@ -169,6 +175,7 @@
   align-items: center;
 }
 
+/* Koding Hasil BMI */
 .result-title {
   font-size: 18px;
 }
@@ -198,6 +205,7 @@
   text-align: center;
 }
 
+/* Koding Mengatur Ukuruan Tampilan Logo Download */
 .download-app {
   display: flex;
   flex-direction: column;
